# gtkgo

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.in  configure.old  gtkgo.desktop  gtkgoico.xpm  install-sh
computers/: Makefile.am  Makefile.in  default.gtkgo  default2.gtkgo
debian/: changelog  control  copyright  gtkgo.6  gtkgoico.xpm  menu  rules
help/: Makefile.am  Makefile.in  README
mp3/: Makefile.am  Makefile.in
pix/: Makefile.am  Makefile.in
skins/: Makefile.am  Makefile.in
src/: About.c  About.h  AskSave.c  AskSave.h  BoardPlace.c  BoardPlace.h  Change.c  Change.h  ChangePixmap.c  ChangePixmap.h  ChangeSkin.c  ChangeSkin.h  CheckSides.c  CheckSides.h  Computer.c  Computer.h  DeadStones.c  DeadStones.h  DestroyChange.c  DestroyChange.h  DestroyFiles.c  DestroyFiles.h  DestroyFiles2.c  DestroyFiles2.h  DestroyMessage.c  DestroyMessage.h  DestroyOptions.c  DestroyOptions.h  DestroyYesNo.c  DestroyYesNo.h  DoHandicap.c  DoHandicap.h  EnableComp.c  EnableComp.h  EndGame.c  EndGame.h  FreePlace.c  FreePlace.h  Handicap.c  Handicap.h  (+82 more)
