dnl Process this file with autoconf to produce a configure script.

AC_INIT(src)
AM_INIT_AUTOMAKE(gtkgo, 0.0.10)

AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

missing=""
AC_CHECK_LIB(m, pow)
PKG_CHECK_MODULES(GTK,gtk+-2.0 gdk-2.0)
AC_HEADER_STDC
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_ARG_ENABLE(gnome,
[  --disable-gnome         disable use of gnome],
        gnome=$enableval, gnome=yes)

AM_CONDITIONAL(USE_GNOME, test "x$gnome" = "xyes")

LIBS="$LIBS $GTK_LIBS"
CFLAGS="$CFLAGS $GTK_CFLAGS"

AC_OUTPUT(Makefile \
	computers/Makefile \
	help/Makefile \
	mp3/Makefile \
	pix/Makefile \
	skins/Makefile \
	src/Makefile \
	)

echo
if test "$gnome" = "yes"; then
  echo ...building gtkgo $VERSION with Gnome $GNOME_VER!
else
  echo ...building gtkgo $VERSION without Gnome!
fi
echo
