## Process this file with automake to produce Makefile.in

pixdir = $(pkgdatadir)/pix
pix_DATA = 1.png 1x.png 2.png 2x.png 3.png 3x.png 4.png 4x.png 5.png 5b.png \
	5bx.png 5x.png 6.png 6off.png 6offx.png 6on.png 6onx.png 6x.png 7.png \
	7off.png 7offx.png 7on.png 7onx.png 7x.png 8.png 8off.png 8offx.png \
	8on.png 8onx.png 8x.png 9.png 90.png 90x.png 910.png 910x.png 911.png \
	911x.png 912.png 912x.png 913.png 913x.png 914.png 914x.png 915.png \
	915x.png 916.png 916x.png 917.png 917x.png 92.png 92x.png 93.png \
	93x.png 94.png 94x.png 95.png 95x.png 96.png 96x.png 97.png 97x.png \
	98.png 98x.png 99.png 99x.png 9x.png correct.png error.png gologo.png \
	gologog.png no.png yes.png
