## Process this file with automake to produce Makefile.in

bin_PROGRAMS = gtkgo

gtkgo_SOURCES =\
	About.c \
	About.h \
	AskSave.c \
	AskSave.h \
	BoardPlace.c \
	BoardPlace.h \
	Change.c \
	Change.h \
	ChangePixmap.c \
	ChangePixmap.h \
	ChangeSkin.c \
	ChangeSkin.h \
	CheckSides.c \
	CheckSides.h \
	Computer.c \
	Computer.h \
	DeadStones.c \
	DeadStones.h \
	DestroyChange.c \
	DestroyChange.h \
	DestroyFiles.c \
	DestroyFiles.h \
	DestroyFiles2.c \
	DestroyFiles2.h \
	DestroyMessage.c \
	DestroyMessage.h \
	DestroyOptions.c \
	DestroyOptions.h \
	DestroyYesNo.c \
	DestroyYesNo.h \
	DoHandicap.c \
	DoHandicap.h \
	EnableComp.c \
	EnableComp.h \
	EndGame.c \
	EndGame.h \
	FreePlace.c \
	FreePlace.h \
	Handicap.c \
	Handicap.h \
	Help.c \
	Help.h \
	Hint.c \
	Hint.h \
	HowMany.c \
	HowMany.h \
	Human.c \
	Human.h \
	Internet.c \
	Internet.h \
	InternetGo.c \
	InternetGo.h \
	JudgeBoard.c \
	JudgeBoard.h \
	Latest.c \
	Latest.h \
	MainWindow.c \
	MainWindow.h \
	MakeMove.c \
	MakeMove.h \
	Message.c \
	Message.h \
	Modulo.c \
	Modulo.h \
	MyLand.c \
	MyLand.h \
	NotSuicide.c \
	NotSuicide.h \
	Options.c \
	Options.h \
	OptionsX.c \
	OptionsX.h \
	Pass.c \
	Pass.h \
	PixmapOnButton.c \
	PixmapOnButton.h \
	Play.c \
	Play.h \
	Quit.c \
	Quit.h \
	ReceiveData.c \
	ReceiveData.h \
	ReSize.c \
	ReSize.h \
	ReStart.c \
	ReStart.h \
	ReallyQuit.c \
	ReallyQuit.h \
	ReallyReStart.c \
	ReallyReStart.h \
	Save.c \
	Save.h \
	SaveSgf.c \
	SaveSgf.h \
	ScoreBlack.c \
	ScoreBlack.h \
	ScoreWhite.c \
	ScoreWhite.h \
	SendData.c \
	SendData.h \
	SetTimeLimit.c \
	SetTimeLimit.h \
	Skin.c \
	Skin.h \
	Sound.c \
	Sound.h \
	StatusBar.c \
	StatusBar.h \
	TheComputer.c \
	TheComputer.h \
	TimeLimit.c \
	TimeLimit.h \
	Tooltips.c \
	Tooltips.h \
	Undo.c \
	Undo.h \
	Where.c \
	Where.h \
	config.h \
	main.c \
	main.h

INCLUDES = -I. $(GTK_CFLAGS) -Wall -DPKGDATADIR=\"${pkgdatadir}/\"
gtkgo_LDADD = $(GTK_LIBS)
